// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`it overrides expected resources 1`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "createSong",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "MutationcreateSonginit0FunctionMutationcreateSonginit0FunctionAppSyncFunction55782DDF",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationCreateSongDataResolverFnMutationCreateSongDataResolverFnAppSyncFunctionFC04B955",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "createSong"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 2`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "getSong",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QueryGetSongDataResolverFnQueryGetSongDataResolverFnAppSyncFunctionC7E7E88A",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "getSong"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 3`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "listSongs",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QueryListSongsDataResolverFnQueryListSongsDataResolverFnAppSyncFunctionD32DC12B",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "listSongs"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 4`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "deleteSong",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationDeleteSongDataResolverFnMutationDeleteSongDataResolverFnAppSyncFunctionDE1E317E",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "deleteSong"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 5`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "updateSong",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "MutationupdateSonginit0FunctionMutationupdateSonginit0FunctionAppSyncFunctionE35F0E12",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationUpdateSongDataResolverFnMutationUpdateSongDataResolverFnAppSyncFunction4ADCC009",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "updateSong"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 6`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "syncSongs",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerysyncSongspreAuth0FunctionQuerysyncSongspreAuth0FunctionAppSyncFunction06967782",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerySyncSongsDataResolverFnQuerySyncSongsDataResolverFnAppSyncFunction70698E3C",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "syncSongs"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "SongTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 15))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 7`] = `
{
  "DependsOn": [
    "SongIAMRole5755BC78",
  ],
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "DynamoDBConfig": {
      "AwsRegion": {
        "Ref": "AWS::Region",
      },
      "DeltaSyncConfig": {
        "BaseTableTTL": "20",
        "DeltaSyncTableName": "SongTable",
        "DeltaSyncTableTTL": "15",
      },
      "TableName": {
        "Ref": "SongTable",
      },
      "Versioned": true,
    },
    "Name": "SongTable",
    "ServiceRoleArn": {
      "Fn::GetAtt": [
        "SongIAMRole5755BC78",
        "Arn",
      ],
    },
    "Type": "AMAZON_DYNAMODB",
  },
  "Type": "AWS::AppSync::DataSource",
}
`;
